--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-scripts": "3.2.0",
+    "rsuite": "^4.3.4",
     "web3": "^1.2.2"
   },
   "scripts": {
