--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "node-sass": "^4.13.1",
+    "object-hash": "^2.0.3",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "rsuite": "^4.3.4",
     "web3": "^1.2.2"
