--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ipfs-mini": "^1.1.5",
     "node-sass": "^4.13.1",
     "object-hash": "^2.0.3",
     "react": "16.11.0",
